--- a/index.html
+++ b/index.html
@@ -107,8 +107,26 @@
                             <div class="testimonials-item">
                                 <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Apex Legends 3 Days</h4>
+                                    <h4>Apex Legends Basic Version</h4>
                                     <span>$5.99</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="testimonials-item">
+                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
+                                <div class="text-content">
+                                    <h4>Apex Legends Cocaine Version</h4>
+                                    <span>$7.99</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="testimonials-item">
+                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
+                                <div class="text-content">
+                                    <h4>Apex Legends Weed Version</h4>
+                                    <span>$12.99</span>
                                 </div>
                             </div>
                         </div>
@@ -172,6 +190,7 @@
                                 <div class="text-content">
                                     <h4>Rust 24 Hours</h4>
                                     <span>$4.00</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
