--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>BlackSectorV - Cheats</title>
-        <meta name="description" content="">
+        <meta name="description" content="Official BlackSectorV developer website! If you want really good and cheap private cheats then you should choose BlackSectorV">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apex-olympus-1600x900.jpg">
-
+        
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/fontAwesome.css">
         <link rel="stylesheet" href="css/hero-slider.css">
