--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>BlackSectorV - Cheats</title>
         <meta name="description" content="Official BlackSectorV developer website! If you want really good and cheap private cheats then you should choose BlackSectorV">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="title" content="BlackSectorV"
         <link rel="apple-touch-icon" href="apex-olympus-1600x900.jpg">
         
         <link rel="stylesheet" href="css/bootstrap.min.css">
