--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>BlackSectorV - Cheats</title>
-        <meta name="description" content="Official BlackSectorV developer website! If you want really good and cheap private cheats then you should choose BlackSectorV">
+        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="title" content="BlackSectorV"
         <link rel="apple-touch-icon" href="apex-olympus-1600x900.jpg">
-        
+
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/fontAwesome.css">
         <link rel="stylesheet" href="css/hero-slider.css">
@@ -106,7 +105,7 @@
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Apex Legends Basic Version</h4>
                                     <span>$5.99</span>
@@ -115,7 +114,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Apex Legends Cocaine Version</h4>
                                     <span>$7.99</span>
@@ -124,7 +123,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Apex Legends Weed Version</h4>
                                     <span>$12.99</span>
@@ -133,25 +132,25 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/2nd-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Rainbow Six Siege 1 Day</h4>
-                                    <span>$4.00</span>
+                                    <span>$3.00</span>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/3rd-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/3rd-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Rainbow Six Siege 5 Days</h4>
-                                    <span>$7.00</span>
+                                    <span>$5.00</span>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/4th-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/4th-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Rust 3 Days</h4>
                                     <span>$10.00</span>
@@ -160,7 +159,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/5th-item.png" alt=""></a>
+                                <a href="redirect.hmtl"><img src="img/5th-item.png" alt=""></a>
                                 <div class="text-content">
                                     <h4>Rust 1 Week</h4>
                                     <span>$20.00</span>
@@ -169,7 +168,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/6th-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/6th-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>PUBG 24 Hours</h4>
                                     <span>$4.00</span>
@@ -178,7 +177,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/7th-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/7th-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>PUBG 5 Days</h4>
                                     <span>$15.00</span>
@@ -187,10 +186,10 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/purchase.jpg" data-lightbox="image-1"><img src="img/8th-item.jpg" alt=""></a>
+                                <a href="redirect.html"><img src="img/8th-item.jpg" alt=""></a>
                                 <div class="text-content">
                                     <h4>Rust 24 Hours</h4>
-                                    <span>$5.00</span>
+                                    <span>$4.00</span>
                                     </div>
                                 </div>
                             </div>
