--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="redirect.hmtl"><img src="img/5th-item.png" alt=""></a>
+                                <a href="redirect.html"><img src="img/5th-item.png" alt=""></a>
                                 <div class="text-content">
                                     <h4>Rust 1 Week</h4>
                                     <span>$20.00</span>
