--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="redirect.html"><img src="img/5th-item.png" alt=""></a>
+                                <a href="redirect.hmtl"><img src="img/5th-item.png" alt=""></a>
                                 <div class="text-content">
                                     <h4>Rust 1 Week</h4>
                                     <span>$20.00</span>
@@ -206,6 +206,9 @@
                 <div class="col-md-12">
                     <div class="primary-button">
                         <a href="https://discord.gg/yxGZHCHynt">Discord Server</a>
+                    </div>
+                    <div>
+                        <p>If you have problem with the cheats then click <a href="ISSUE_TEMPLATE">here</a>.</p>
                     </div>
                     <p>Copyright &copy; 2020 BlackSectorV </p>
                 </div>
