--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <a href="https://discord.gg/yxGZHCHynt">Discord Server</a>
                     </div>
                     <div>
-                        <p>If you have problem with the cheats then click <a href="ISSUE_TEMPLATE">here</a>.</p>
+                        <p>If you have problem with the cheats then click <a href="issue-fixes.md">here</a>.</p>
                     </div>
                     <p>Copyright &copy; 2020 BlackSectorV </p>
                 </div>
