--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <title>BlackSectorV - Cheats</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apex-olympus-1600x900.jpg">
+        <link rel="apple-touch-icon" href="img/dcicon.png">
+        <link rel="icon" sizes="16x16 32x32 64x64" href="img/dcicon.png">
+        <link rel="icon" href="img/dcicon.png">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/fontAwesome.css">
@@ -206,6 +208,9 @@
                 <div class="col-md-12">
                     <div class="primary-button">
                         <a href="https://discord.gg/yxGZHCHynt">Discord Server</a>
+                    </div>
+                    <div>
+                        <p>If you have problem with the cheats then click <a href="ISSUE_TEMPLATE">here</a>.</p>
                     </div>
                     <p>Copyright &copy; 2020 BlackSectorV </p>
                 </div>
