--- a/redirect.html
+++ b/redirect.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="5; url='https://discord.gg/yxGZHCHynt'">
+	<meta http-equiv="refresh" content="5; url='https://discord.gg/Mrc7vXXf4y'">
 
 	<title>Redirecting...</title>
 </head>
 <body>
 	<h1>Redirecting To Our Discord Server...</h1>
 	<h2>Automatic payment will be added in the future</h2>
-	<p>If you don't get redirected automaticly then click <a href="https://discord.gg/yxGZHCHynt">here</a>.</p>
+	<p>If you don't get redirected automaticly then click <a href="https://discord.gg/Mrc7vXXf4y">here</a>.</p>
 </body>
 </html>
