--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="primary-button">
-                        <a href="https://discord.gg/yxGZHCHynt">Discord Server</a>
+                        <a href="https://discord.gg/Mrc7vXXf4y">Discord Server</a>
                     </div>
                     <div>
                         <p>If you have problem with the cheats then click <a href="ISSUE_TEMPLATE">here</a>.</p>
